--- a/.github/workflows/validate_schema.yml
+++ b/.github/workflows/validate_schema.yml
@@ -11,6 +11,8 @@ on:
       - "schema/**"
       - "scripts/schema/**"
       - ".github/workflows/validate_schema.yml"
+      - "src/bin/schema.rs"
+      - "Cargo.toml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -26,7 +28,7 @@ jobs:
         uses: fkirc/skip-duplicate-actions@f75f66ce1886f00957d99748a42c724f4330bdcf # v5.3.1
         with:
           skip_after_successful_duplicate: "true"
-          paths: '["schema/**", ".github/workflows/validate_schema.yml"]'
+          paths: '["schema/**", "scripts/schema/**", ".github/workflows/validate_schema.yml", "src/bin/schema.rs", "Cargo.toml"]'
           do_not_skip: '["workflow_dispatch"]'
 
   test-build-documentation:
