--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,7 @@ jobs:
       - name: Check cargo fmt
         run: cargo fmt --all -- --check
 
+      # TODO: add junit output using nextest for codecov (https://docs.codecov.com/docs/test-analytics)
       - name: Build tests
         uses: ClementTsang/cargo-action@v0.0.5
         with:
