bug: fix invalid values in desktop file
The current desktop file caused an error and a hint from `desktop-file-validate` 0.28.
This commit addresses those issues:

- The "Version" field must be empty or a desktop entry specification version (e.g., 1.0, 1.5),
  not the tool's version.
- The "Categories" field should only contain one main category to avoid warnings.

ref: https://specifications.freedesktop.org/desktop-entry-spec/1.5/recognized-keys.html

--- a/desktop/bottom.desktop
+++ b/desktop/bottom.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Name=bottom
-Version=0.10.2
+Version=1.5
 GenericName=System Monitor
 Comment=A customizable cross-platform graphical process/system monitor for the terminal.
 Exec=btm
 Terminal=true
 Type=Application
-Categories=Utility;System;ConsoleOnly;Monitor;
+Categories=System;ConsoleOnly;Monitor;
 StartupNotify=false
