--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,24 +75,33 @@ generate_schema = ["schemars", "serde_json", "strum"]
 anyhow = "1.0.98"
 backtrace = "0.3.75"
 cfg-if = "1.0.1"
-clap = { version = "4.5.40", features = ["default", "cargo", "wrap_help", "derive"] }
+clap = { version = "4.5.40", features = [
+    "default",
+    "cargo",
+    "wrap_help",
+    "derive",
+] }
 concat-string = "1.0.1"
 crossterm = "0.29.0"
 ctrlc = { version = "3.4.7", features = ["termination"] }
 dirs = "6.0.0"
 hashbrown = "0.15.4"
 humantime = "2.2.0"
-indexmap = "2.9.0"
+indexmap = "2.10.0"
 indoc = "2.0.6"
 itertools = "0.14.0"
-nvml-wrapper = { version = "0.11.0", optional = true, features = ["legacy-functions"] }
+nvml-wrapper = { version = "0.11.0", optional = true, features = [
+    "legacy-functions",
+] }
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 starship-battery = { version = "0.10.2", optional = true }
 sysinfo = "=0.35.2"
 timeless = "0.0.14-alpha"
 toml_edit = { version = "0.22.27", features = ["serde"] }
-tui = { version = "0.29.0", package = "ratatui", features = ["unstable-rendered-line-info"] }
+tui = { version = "0.29.0", package = "ratatui", features = [
+    "unstable-rendered-line-info",
+] }
 unicode-ellipsis = "0.3.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.0"
@@ -100,7 +109,11 @@ unicode-width = "0.2.0"
 # Used for logging. Mostly a debugging tool.
 fern = { version = "0.7.1", optional = true }
 log = { version = "0.4.27", optional = true }
-time = { version = "0.3.41", features = ["local-offset", "formatting", "macros"], optional = true }
+time = { version = "0.3.41", features = [
+    "local-offset",
+    "formatting",
+    "macros",
+], optional = true }
 
 # These are just used for JSON schema generation.
 schemars = { version = "0.9.0", optional = true }
@@ -135,7 +148,9 @@ filedescriptor = "0.8.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.17"
-cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
+cargo-husky = { version = "1.5.0", default-features = false, features = [
+    "user-hooks",
+] }
 predicates = "3.1.3"
 tempfile = { version = "3.20.0", default-features = false }
 
@@ -143,7 +158,12 @@ tempfile = { version = "3.20.0", default-features = false }
 portable-pty = "0.9.0"
 
 [build-dependencies]
-clap = { version = "4.5.40", features = ["default", "cargo", "wrap_help", "derive"] }
+clap = { version = "4.5.40", features = [
+    "default",
+    "cargo",
+    "wrap_help",
+    "derive",
+] }
 clap_complete = "4.5.54"
 clap_complete_nushell = "4.5.7"
 clap_complete_fig = "4.5.2"
