--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,14 +279,16 @@ jobs:
           # may be related to this issue: https://github.com/cross-rs/cross/issues/1291
           #
           # Alas, that's why we do it with VMs.
+
+          # Disabled as there's a weird issue with installing curl on FreeBSD 15 at the moment.
+          # - {
+          #     type: "freebsd",
+          #     os_release: "15.0",
+          #     target: "x86_64-unknown-freebsd",
+          #   }
           - {
               type: "freebsd",
-              os_release: "15.0",
-              target: "x86_64-unknown-freebsd",
-            }
-          - {
-              type: "freebsd",
-              os_release: "14.2",
+              os_release: "14.3",
               target: "x86_64-unknown-freebsd",
             }
           - {
@@ -309,7 +311,7 @@ jobs:
 
       - name: Clippy (FreeBSD)
         if: ${{ matrix.info.type == 'freebsd' }}
-        uses: vmactions/freebsd-vm@c3ae29a132c8ef1924775414107a97cac042aad5 # v1.2.0
+        uses: vmactions/freebsd-vm@966989c456d41351f095a421f60e71342d3bce41 # v1.2.1
         with:
           release: "${{ matrix.info.os_release }}"
           envs: "RUST_BACKTRACE CARGO_INCREMENTAL CARGO_PROFILE_DEV_DEBUG CARGO_HUSKY_DONT_INSTALL_HOOKS"
