--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -100,6 +100,9 @@
 # Hides advanced options to stop a process on Unix-like systems. Only available on Linux, macOS, and FreeBSD
 #disable_advanced_kill = false
 
+# Hides the kernel threads
+#hide_k_threads = false
+
 # Hide GPU(s) information
 #disable_gpu = false
 
