ci: test freebsd ARM
This is just going to exist for posterity; currently this is not
possible without some annoyance because ARM freebsd is tier 3 (and hence
there are no builds for it by default).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -280,7 +280,7 @@ jobs:
           #
           # Alas, that's why we do it with VMs.
 
-          # Disabled as there's a weird issue with installing curl on FreeBSD 15 at the moment.
+          # Disabled as there's a weird issue with installing curl on FreeBSD 15 with x86 at the moment.
           # - {
           #     type: "freebsd",
           #     os_release: "15.0",
@@ -288,7 +288,22 @@ jobs:
           #   }
           - {
               type: "freebsd",
+              os_release: "15.0",
+              target: "x86_64-unknown-freebsd",
+            }
+          - {
+              type: "freebsd",
               os_release: "14.3",
+              target: "x86_64-unknown-freebsd",
+            }
+          - {
+              type: "freebsd",
+              os_release: "14.3",
+              target: "x86_64-unknown-freebsd",
+            }
+          - {
+              type: "freebsd",
+              os_release: "13.5",
               target: "x86_64-unknown-freebsd",
             }
           - {
