--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -122,9 +122,12 @@ jobs:
               cross: true,
             }
 
-          # Seems like cross' FreeBSD image is a bit broken? I
-          # get build errors, may be related to this issue:
-          # https://github.com/cross-rs/cross/issues/1291
+          # Windows ARM
+          - {
+              os: "windows-11-arm64",
+              target: "aarch64-pc-windows-msvc",
+              cross: false,
+            }
     steps:
       - name: Checkout repository
         if: matrix.info.container == ''
@@ -220,7 +223,7 @@ jobs:
           name: "release-${{ matrix.info.target }}"
           path: release
 
-  build-vm:
+  build-with-vm:
     name: "Build binaries via VMs"
     runs-on: "ubuntu-latest"
     timeout-minutes: 12
@@ -304,8 +307,22 @@ jobs:
 
   build-msi:
     name: "Build MSI (WiX) installer"
-    runs-on: "windows-2022"
     timeout-minutes: 12
+    strategy:
+      fail-fast: false
+      matrix:
+        info:
+          - {
+              os: "windows-2022",
+              target: "x86_64-pc-windows-msvc",
+              output: "bottom_x86_64_installer.msi"
+            }
+          - {
+              os: "windows-11-arm64",
+              target: "aarch64-pc-windows-msvc",
+              output: "bottom_aarch64_installer.msi"
+            }
+    runs-on: ${{ matrix.info.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -325,7 +342,7 @@ jobs:
         uses: dtolnay/rust-toolchain@21dc36fb71dd22e3317045c0c31a3f4249868b17
         with:
           toolchain: stable
-          target: x86_64-pc-windows-msvc
+          target: ${{ matrix.info.target }}
 
       - name: Install cargo-wix
         shell: powershell
@@ -342,19 +359,19 @@ jobs:
       - name: Generate artifact attestation for file
         uses: actions/attest-build-provenance@6149ea5740be74af77f260b9db67e633f6b0a9a1 # v1.4.2
         with:
-          subject-path: "bottom_x86_64_installer.msi"
+          subject-path: ${{ matrix.info.output }}
 
       - name: Create release directory for artifact, move files
         shell: bash
         run: |
           mkdir release
-          mv bottom_x86_64_installer.msi release/
+          mv ${{ matrix.info.output }} release/
 
       - name: Save release as artifact
         uses: actions/upload-artifact@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
         with:
           retention-days: 3
-          name: "release-build-msi"
+          name: "release-${{ matrix.info.target }}-msi"
           path: release
 
   build-cirrus:
