--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -330,14 +330,14 @@ jobs:
           fetch-depth: 1
 
       - name: Install Net-Framework-Core
-        uses: crazy-max/ghaction-chocolatey@0e015857dd851f84fcb7fb53380eb5c4c8202333 # v3.0.0
-        with:
-          args: install dotnet-sdk --pre -y --no-progress
+        shell: powershell
+        run: |
+          choco install dotnet-sdk --pre -y --no-progress;
 
       - name: Install wixtoolset
-        uses: crazy-max/ghaction-chocolatey@0e015857dd851f84fcb7fb53380eb5c4c8202333 # v3.0.0
-        with:
-          args: install -y wixtoolset
+        shell: powershell
+        run: |
+          choco install -y wixtoolset --no-progress;
 
       - name: Set up Rust toolchain
         uses: dtolnay/rust-toolchain@21dc36fb71dd22e3317045c0c31a3f4249868b17
@@ -355,6 +355,8 @@ jobs:
         env:
           BTM_GENERATE: true
         run: |
+          Import-Module "$env:ChocolateyInstall/helpers/chocolateyInstaller.psm1"
+          refreshenv
           cargo wix --nocapture
 
       - name: Generate artifact attestation for file
