--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -76,6 +76,9 @@
 # Disable mouse clicks
 #disable_click = false
 
+# Disable keyboard shortcuts
+#disable_keys = false
+
 # Show memory values in the processes widget as values by default
 #process_memory_as_value = false
 
@@ -263,6 +266,9 @@
 #text = {color = "gray"}
 #selected_text = {color = "black", bg_color = "light blue"}
 #disabled_text = {color = "dark gray"}
+
+# Only on Linux
+#thread_text = {color = "green"}
 
 # Layout - layouts follow a pattern like this:
 # [[row]] represents a row in the application.
