--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -9,6 +9,9 @@
 # Whether to hide the average cpu entry.
 #hide_avg_cpu = false
 
+# Whether to use a dedicated row for the average cpu entry
+#average_cpu_row = false
+
 # Whether to use dot markers rather than braille.
 #dot_marker = false
 
