feature: free arc

--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -115,6 +115,9 @@
 # Shows cache and buffer memory
 #enable_cache_memory = false
 
+# Subtract freeable ARC from memory usage
+#free_arc = false
+
 # How much data is stored at once in terms of time.
 #retention = "10m"
 
