--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,6 +124,7 @@ windows = { version = "0.62.0", features = [
     "Win32_Storage_FileSystem",
     "Win32_System_IO",
     "Win32_System_Ioctl",
+    "Win32_System_Performance",
     "Win32_System_ProcessStatus",
     "Win32_System_Threading",
 ] }
