add get_threads to default config

--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -134,6 +134,9 @@
 # PID, Name, CPU%, Mem%, R/s, W/s, T.Read, T.Write, User, State, Time, GMem%, GPU%
 #columns = ["PID", "Name", "CPU%", "Mem%", "Virt", "R/s", "W/s", "T.Read", "T.Write", "User", "State", "GMem%", "GPU%"]
 
+# Gather process child thread information
+#get_threads = false
+
 
 # CPU widget configuration
 #[cpu]
