--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -79,8 +79,8 @@ jobs:
             }
 
           # macOS (x86-64 and aarch64)
-          - { os: "macos-13", target: "x86_64-apple-darwin", cross: false }
-          - { os: "macos-14", target: "aarch64-apple-darwin", cross: false }
+          - { os: "macos-15-intel", target: "x86_64-apple-darwin", cross: false }
+          - { os: "macos-15", target: "aarch64-apple-darwin", cross: false }
 
           # Windows (x86-64, x86)
           - {
@@ -236,12 +236,11 @@ jobs:
 
           # Alas, that's why we do it with VMs.
 
-          # Disabled as there's a weird issue with installing curl on FreeBSD 15 at the moment.
-          # - {
-          #     type: "freebsd",
-          #     os_release: "15.0",
-          #     target: "x86_64-unknown-freebsd",
-          #   }
+          - {
+              type: "freebsd",
+              os_release: "15.0",
+              target: "x86_64-unknown-freebsd",
+            }
           - {
               type: "freebsd",
               os_release: "14.3",
