--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.11.2"
 repository = "https://github.com/ClementTsang/bottom"
 license = "MIT"
 description = "A customizable cross-platform graphical process/system monitor for the terminal. Supports Linux, macOS, and Windows."
-documentation = "https://clementtsang.github.io/bottom/stable"
+documentation = "https://bottom.pages.dev/stable"
 readme = "README.md"
 default-run = "btm"
 build = "build.rs"
