--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,10 +67,12 @@ deploy = ["battery", "gpu", "zfs"]
 default = ["deploy"]
 opentelemetry = [
     "dep:opentelemetry",
-    "dep:opentelemetry-otlp", 
+    "dep:opentelemetry-otlp",
     "dep:opentelemetry_sdk",
     "dep:opentelemetry-semantic-conventions",
-    "dep:tonic"
+    "dep:tonic",
+    "dep:tracing",
+    "dep:thiserror"
 ]
 
 # Should not be included in builds.
@@ -123,10 +125,9 @@ opentelemetry_sdk = { version = "0.23", features = ["metrics", "rt-tokio"], opti
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }
 tonic = { version = "0.11", optional = true }
 
-# Per serializzazione configurazione (se non già presente)
-serde_yaml = "0.9"
-tracing = "0.1"
-thiserror = "1.0"
+# Dipendenze OpenTelemetry aggiuntive (opzionali)
+tracing = { version = "0.1", optional = true }
+thiserror = { version = "1.0", optional = true }
 
 lazy_static = "1.4"
 
