feature: free arc (#1812)
* feature: free arc

* freebsd clippy no-default-features

* add alias to free_arc

* add get_threads to default config

* clippy

* code review: combine zfs feature and target_os build cfgs

--- a/sample_configs/default_config.toml
+++ b/sample_configs/default_config.toml
@@ -115,6 +115,9 @@
 # Shows cache and buffer memory
 #enable_cache_memory = false
 
+# Subtract freeable ARC from memory usage
+#free_arc = false
+
 # How much data is stored at once in terms of time.
 #retention = "10m"
 
@@ -130,6 +133,9 @@
 # The columns shown by the process widget. The following columns are supported (the GPU columns are only available if the GPU feature is enabled when built):
 # PID, Name, CPU%, Mem%, R/s, W/s, T.Read, T.Write, User, State, Time, GMem%, GPU%
 #columns = ["PID", "Name", "CPU%", "Mem%", "Virt", "R/s", "W/s", "T.Read", "T.Write", "User", "State", "GMem%", "GPU%"]
+
+# Gather process child thread information
+#get_threads = false
 
 
 # CPU widget configuration
