--- a/Cargo.toml
+++ b/Cargo.toml
@@ -205,6 +205,11 @@ assets = [
         "usr/share/applications/bottom.desktop",
         "644",
     ],
+    [
+        "assets/icon.svg",
+        "/usr/share/pixmaps/bottom.svg",
+        "644",
+    ],
 ]
 extended-description = """
 
@@ -231,6 +236,7 @@ assets = [
     { source = "completion/btm.fish", dest = "/usr/share/fish/vendor_completions.d/btm.fish", mode = "644" },
     { source = "completion/_btm", dest = "/usr/share/zsh/vendor-completions/", mode = "644" },
     { source = "desktop/bottom.desktop", dest = "/usr/share/applications/bottom.desktop", mode = "644" },
+    { source = "assets/icon.svg", dest = "/usr/share/pixmaps/bottom.svg", mode = "644" },
 ]
 
 [lints.rust]
